--- a/index.html
+++ b/index.html
@@ -4,41 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IPDC Page Clone</title>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="container">
       <div class="bg-img">
-        <div class="main">
-          <header>
-            <div class="logo">
-              <img src="./Assets/website-logo.png" alt="" />
+       <div class="main">
+        <header>
+          <div class="logo">
+            <img src="Assets/website-logo.png" alt="" />
+          </div>
+          <nav>
+            <ul>
+              <a href="#">RETAIL</a>
+              <a href="#">SME</a>
+              <a href="#">CORPORATE</a>
+              <a href="#">ABOUT US</a>
+              <a href="#">COVID 19</a>
+              <a href="#">CAMPGAINS</a>
+            </ul>
+          </nav>
+          <div class="srch-btn">
+            <div class="srch-icon">
+              <img src="Assets/search-icon.png" alt="" />
             </div>
-            <nav>
-              <ul>
-                <a href="#">RETAIL</a>
-                <a href="#">SME</a>
-                <a href="#">CORPORATE</a>
-                <a href="#">ABOUT US</a>
-                <a href="#">COVID 19</a>
-                <a href="#">CAMPGAINS</a>
-              </ul>
-            </nav>
-            <div class="srch-btn">
-              <div class="srch-icon">
-                <img src="./Assets/search-icon.png" alt="" />
-              </div>
-              <button class="primary-btn">Services</button>
-            </div>
-          </header>
-          <button class="secondary-btn btn-01">
-            <img src="./Assets/car.png" alt="" />
-            <p>Car Loan</p>
-          </button>
-          <button class="secondary-btn btn-02">
-            <img src="./Assets/House.png" alt="" />
-            <p>Home Loan</p>
-          </button>
+            <button class="primary-btn">Services</button>
+          </div>
+        </header>
+        <button class="secondary-btn btn-01">
+          <img src="Assets/car.png" alt="" />
+          <p>Car Loan</p>
+        </button>
+        <button class="secondary-btn btn-02">
+          <img src="Assets/House.png" alt="" />
+          <p>Home Loan</p>
+        </button>
+        <main>
           <div class="bg-container">
             <div class="hero-txt">
               <div class="hero-details">
@@ -55,21 +56,22 @@
                 <button class="primary-btn btn-4">APPLY ONLINE</button>
                 <button class="primary-btn btn-5">LOAN CALCULATOR</button>
               </div>
-  
+
               <div class="contact-detail">
-                <img src="./Assets/phone.png" alt="phone icone" />
+                <img src="Assets/phone.png" alt="phone icone" />
                 <p>1659 |</p>
-                <img src="./Assets/facebook.png" alt="facebook icon" />
-                <img src="./Assets/youtube.png" alt="youtube icon" />
-                <img src="./Assets/linkedin.png" alt="linkedin icon" />
-                <img src="./Assets/instagram.png" alt="instagram icone" />
+                <img src="Assets/facebook.png" alt="facebook icon" />
+                <img src="Assets/youtube.png" alt="youtube icon" />
+                <img src="Assets/linkedin.png" alt="linkedin icon" />
+                <img src="Assets/instagram.png" alt="instagram icone" />
               </div>
             </div>
             <!-- <div class="hero-img">
-              <img src="./Assets/hero-image.png" alt="" />
+              <img src="Assets/hero-image.png" alt="" />
             </div> -->
           </div>
-        </div>
+        </main>
+       </div>
       </div>
     </div>
   </body>
